loginページから、各サインインページへの遷移ボタンを作成

--- a/careLink/templates/careLink/elder_add.html
+++ b/careLink/templates/careLink/elder_add.html
@@ -9,5 +9,6 @@
         {{ form.as_p }}
         <button type="submit">登録</button>
     </form>
+    <a href="login">ログインページに戻る</a>
 </body>
 </html>
