--- a/careLink/templates/careLink/login.html
+++ b/careLink/templates/careLink/login.html
@@ -1,54 +1,3 @@
-{% comment %} <!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <style>
-        /* アイコン付きリンクのスタイル */
-        .icon-link {
-            display: inline-flex;
-            align-items: center;
-            padding: 10px 20px;
-            margin: 10px;
-            text-decoration: none;
-            font-size: 18px;
-            color: #4CAF50;
-            border: 2px solid #4CAF50;
-            border-radius: 5px;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        .icon-link i {
-            margin-right: 8px;
-        }
-
-        .icon-link:hover {
-            background-color: #4CAF50;
-            color: white;
-        }
-    </style>
-</head>
-<body>
-    <h1>Login Page</h1>
-    <form method="post" action="/login/">
-        {% csrf_token %}
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <br>
-        <button type="submit">Login</button>
-    </form>
-    <a href="signin_elder" class="icon-link"><i class="fas fa-user"></i>高齢者側サインイン</a>
-    <a href="signin_family" class="icon-link"><i class="fas fa-users"></i>家族側サインイン</a>
-
-
-</body>
-</html> {% endcomment %}
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -130,8 +79,8 @@
         <input type="password" id="password" name="password" class="styled-input" required>
         <button type="submit" class="styled-button">Login</button>
     </form>
-    <a href="signin_elder" class="icon-link"><i class="fas fa-user"></i>高齢者側サインイン</a>
-    <a href="signin_family" class="icon-link"><i class="fas fa-users"></i>家族側サインイン</a>
+    <a href="signup_elder" class="icon-link"><i class="fas fa-user"></i>高齢者側サインイン</a>
+    <a href="signup_family" class="icon-link"><i class="fas fa-users"></i>家族側サインイン</a>
 </body>
 </html>
 
