[fix]マージ後の競合の修正

--- a/careLink/templates/careLink/login.html
+++ b/careLink/templates/careLink/login.html
@@ -79,8 +79,8 @@
         <input type="password" id="password" name="password" class="styled-input" required>
         <button type="submit" class="styled-button">Login</button>
     </form>
-    <a href="signup_elder" class="icon-link"><i class="fas fa-user"></i>高齢者側サインイン</a>
-    <a href="signup_family" class="icon-link"><i class="fas fa-users"></i>家族側サインイン</a>
+    <a href="signup_elder" class="icon-link"><i class="fas fa-user"></i>高齢者側サインアップ</a>
+    <a href="signup_family" class="icon-link"><i class="fas fa-users"></i>家族側サインアップ</a>
 </body>
 </html>
 
