--- a/careLink/templates/careLink/base.html
+++ b/careLink/templates/careLink/base.html
@@ -3,8 +3,6 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-
-
 {% load static %}
 
 <!-- ヘッド -->
@@ -16,14 +14,20 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <!-- ページタイトル -->
     <title>{% block title %}{% endblock %}</title>
 </head>
 
 <!-- ボディ -->
-<body>
-    {% block content %}{% endblock %}
+<body class="container">
+    <div class="p-3">
+        {% block content %}{% endblock %}
+    </div>  
 </body>
 
 <!-- 通知 -->
