--- a/careLink/templates/careLink/calender.html
+++ b/careLink/templates/careLink/calender.html
@@ -35,59 +35,83 @@
     }
 </style>
 
+<!-- ナビゲーションバー -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">careApp</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="../../login">test</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../schedule">スケジュール</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../result">行動の確認</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">ヘルプ</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-<div class="row align-items-center mb-3">
-    <div class="col-12">
-        <div class="d-flex justify-content-between align-items-center">
-            <a href="{% url 'careLink:calendar' month_previous.year month_previous.month %}" class="btn btn-outline-secondary">
-                <i class="bi bi-arrow-left me-2"></i>前月
-            </a>
-            
-            <h2 class="text-center m-0 fw-bold">{{ month_current | date:"Y年m月" }}</h2>
-            
-            <a href="{% url 'careLink:calendar' month_next.year month_next.month %}" class="btn btn-outline-secondary">
-                次月<i class="bi bi-arrow-right ms-2"></i>
-            </a>
+<div class="p-3">
+    <div class="row align-items-center mb-3">
+        <div class="col-12">
+            <div class="d-flex justify-content-between align-items-center">
+                <a href="{% url 'careLink:calendar' month_previous.year month_previous.month %}" class="btn btn-outline-secondary">
+                    <i class="bi bi-arrow-left me-2"></i>前月
+                </a>
+                
+                <h2 class="text-center m-0 fw-bold">{{ month_current | date:"Y年m月" }}</h2>
+                
+                <a href="{% url 'careLink:calendar' month_next.year month_next.month %}" class="btn btn-outline-secondary">
+                    次月<i class="bi bi-arrow-right ms-2"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container calendar-container">    
+        <div class="table-responsive">
+            <table class="table table-bordered table-hover text-center">
+                <thead class="table-dark">
+                    <tr>
+                        {% for w in week_names %}
+                            <th>{{ w }}</th>
+                        {% endfor %}
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for week in month_days %}
+                        <tr>
+                            {% for day in week %}
+                                {% if now == day %}
+                                    <td class="table-primary">
+                                {% elif month_current.month != day.month %}
+                                    <td class="table-light text-muted">
+                                {% else %}
+                                    <td>
+                                {% endif %}
+                                    <a href="{% url 'careLink:add_schedule' day|date:'Y-m-d' %}" class="day-link 
+                                        {% if now == day %}text-primary fw-bold
+                                        {% elif month_current.month != day.month %}text-muted 
+                                        {% endif %}">
+                                        {{ day.day }}
+                                    </a>
+                                </td>
+                            {% endfor %}
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
-
-
-<div class="container calendar-container">    
-    <div class="table-responsive">
-        <table class="table table-bordered table-hover text-center">
-            <thead class="table-dark">
-                <tr>
-                    {% for w in week_names %}
-                        <th>{{ w }}</th>
-                    {% endfor %}
-                </tr>
-            </thead>
-            <tbody>
-                {% for week in month_days %}
-                    <tr>
-                        {% for day in week %}
-                            {% if now == day %}
-                                <td class="table-primary">
-                            {% elif month_current.month != day.month %}
-                                <td class="table-light text-muted">
-                            {% else %}
-                                <td>
-                            {% endif %}
-                                <a href="{% url 'careLink:add_schedule' day|date:'Y-m-d' %}" class="day-link 
-                                    {% if now == day %}text-primary fw-bold
-                                    {% elif month_current.month != day.month %}text-muted 
-                                    {% endif %}">
-                                    {{ day.day }}
-                                </a>
-                            </td>
-                        {% endfor %}
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-</div>
-
 {% endblock %}
 
