--- a/careLink/templates/careLink/result.html
+++ b/careLink/templates/careLink/result.html
@@ -1,49 +1,69 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schedule</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-</head>
-<body>
-    <h1>スケジュール</h1>
+{% extends 'careLink/base.html' %}
+{% load widget_tweaks %}
+
+{% block content %}
+    <!-- ナビゲーションバー -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">careApp</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="../../login">test</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../schedule">スケジュール</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../result">行動の確認</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">ヘルプ</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <h1>ToDo確認</h1>
     <form id="date-form">
         {% csrf_token %}
         {{ form.as_p }}
     </form>
 
-    <h2>取得されたデータ:</h2>
+    <h2>行動状況:</h2>
     <ul id="schedule-list">
-        {% for schedule in schedules %}
-            <li>{{ schedule.date }} - {% if schedule.completion %}完了{% else %}未完了{% endif %}</li>
-        {% endfor %}
+        <!-- JSによって動的に表示（ajax） -->
     </ul>
 
     <script>
         $(document).ready(function() {
-            // 初期表示時にデフォルトの日付を取得
+            // 初期表示を行う場合
             const defaultDate = $('#id_date').val();
-            fetchSchedules(defaultDate);
+            fetchSchedules(defaultDate); // データ表示
 
-            // 日付が変更されたときにデータを取得
+            // 日付が変更されたときの処理
             $('#id_date').change(function() {
                 const selectedDate = $(this).val();
-                fetchSchedules(selectedDate);
+                fetchSchedules(selectedDate); // データ表示
             });
-
+            
+            // --- 動的に表示させる関数
             function fetchSchedules(date) {
                 $.ajax({
                     url: "{% url 'careLink:get_schedules' %}",
-                    data: {
-                        'date': date
-                    },
+                    data: { 'date': date },
                     success: function(data) {
                         $('#schedule-list').empty();  // リストをクリア
+
+                        // データが存在する場合
                         if (data.length > 0) {
                             data.forEach(function(schedule) {
-                                $('#schedule-list').append('<li>' + schedule.date + ' - ' + schedule.completion + '</li>');
+                                $('#schedule-list').append('<li>' + schedule.title + ' - ' + schedule.completion + '</li>');
                             });
+                        
+                        // データが存在しない場合
                         } else {
                             $('#schedule-list').append('<li>データがありません。</li>');
                         }
@@ -52,5 +72,5 @@
             }
         });
     </script>
-</body>
-</html>
+
+{% endblock %}
