--- a/careLink/templates/careLink/calender.html
+++ b/careLink/templates/careLink/calender.html
@@ -44,13 +44,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="../../login">test</a>
+                <a class="nav-link" href="{% url 'careLink:login' %}">test</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../schedule">スケジュール</a>
+                <a class="nav-link" href="{% url 'careLink:calendar' %}">スケジュール</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../result">行動の確認</a>
+                <a class="nav-link" href="{% url 'careLink:result' %}">行動の確認</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">ヘルプ</a>
